{
  "version": 4,
  "terraform_version": "1.8.0",
  "serial": 48,
  "lineage": "9a5ef448-0729-ac56-7500-6fc558dbe068",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_docker_swarm",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "2377"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-04-22T11:59:09.936-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/eighth-upgrade-420723/global/firewalls/allow-docker-swarm",
            "log_config": [],
            "name": "allow-docker-swarm",
            "network": "https://www.googleapis.com/compute/v1/projects/eighth-upgrade-420723/global/networks/main-vpc-network",
            "priority": 1000,
            "project": "eighth-upgrade-420723",
            "self_link": "https://www.googleapis.com/compute/v1/projects/eighth-upgrade-420723/global/firewalls/allow-docker-swarm",
            "source_ranges": null,
            "source_service_accounts": null,
            "source_tags": [
              "allow-docker-swarm"
            ],
            "target_service_accounts": null,
            "target_tags": [
              "allow-docker-swarm"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.main_vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-04-22T11:15:30.426-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/eighth-upgrade-420723/global/firewalls/allow-ssh",
            "log_config": [],
            "name": "allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/eighth-upgrade-420723/global/networks/main-vpc-network",
            "priority": 1000,
            "project": "eighth-upgrade-420723",
            "self_link": "https://www.googleapis.com/compute/v1/projects/eighth-upgrade-420723/global/firewalls/allow-ssh",
            "source_ranges": [
              "35.235.240.0/20"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "allow-ssh"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.main_vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "dev_services_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-11-bullseye-v20240415",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/eighth-upgrade-420723/zones/us-east1-b/disks/dev-services-cluster-vm-1"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Cascade Lake",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/eighth-upgrade-420723/zones/us-east1-b/instances/dev-services-cluster-vm-1",
            "instance_id": "6771976918402797411",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "n2-standard-2",
            "metadata_fingerprint": "dCZzJJrUyes=",
            "metadata_startup_script": "#!/bin/bash\n\n# Update the package index\nsudo apt update\n\n# Install dependencies\nsudo apt install -y \\\n    apt-transport-https \\\n    ca-certificates \\\n    curl \\\n    gnupg \\\n    lsb-release\n\n# Add Docker’s official GPG key\ncurl -fsSL https://download.docker.com/linux/debian/gpg | sudo gpg --dearmor -o /usr/share/keyrings/docker-archive-keyring.gpg\n\n# Set up the stable repository\necho \\\n  \"deb [arch=amd64 signed-by=/usr/share/keyring [...]
            "name": "dev-services-cluster-vm-1",
            "network_interface": [
              {
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/eighth-upgrade-420723/global/networks/main-vpc-network",
                "network_ip": "10.0.0.15",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/eighth-upgrade-420723/regions/us-east1/subnetworks/dev-vpc-subnetwork",
                "subnetwork_project": "eighth-upgrade-420723"
              }
            ],
            "project": "eighth-upgrade-420723",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "scratch_disk": [
              {
                "interface": "NVME"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/eighth-upgrade-420723/zones/us-east1-b/instances/dev-services-cluster-vm-1",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "allow-docker-swarm",
              "allow-http",
              "allow-ssh",
              "dev-instances"
            ],
            "tags_fingerprint": "ClMLxTrTImg=",
            "zone": "us-east1-b"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "dependencies": [
            "google_compute_network.main_vpc_network",
            "google_compute_subnetwork.dev_vpc_subnetwork"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-11-bullseye-v20240415",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/eighth-upgrade-420723/zones/us-east1-b/disks/dev-services-cluster-vm-2"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Cascade Lake",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/eighth-upgrade-420723/zones/us-east1-b/instances/dev-services-cluster-vm-2",
            "instance_id": "8776859637766623075",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "n2-standard-2",
            "metadata_fingerprint": "dCZzJJrUyes=",
            "metadata_startup_script": "#!/bin/bash\n\n# Update the package index\nsudo apt update\n\n# Install dependencies\nsudo apt install -y \\\n    apt-transport-https \\\n    ca-certificates \\\n    curl \\\n    gnupg \\\n    lsb-release\n\n# Add Docker’s official GPG key\ncurl -fsSL https://download.docker.com/linux/debian/gpg | sudo gpg --dearmor -o /usr/share/keyrings/docker-archive-keyring.gpg\n\n# Set up the stable repository\necho \\\n  \"deb [arch=amd64 signed-by=/usr/share/keyring [...]
            "name": "dev-services-cluster-vm-2",
            "network_interface": [
              {
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/eighth-upgrade-420723/global/networks/main-vpc-network",
                "network_ip": "10.0.0.16",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/eighth-upgrade-420723/regions/us-east1/subnetworks/dev-vpc-subnetwork",
                "subnetwork_project": "eighth-upgrade-420723"
              }
            ],
            "project": "eighth-upgrade-420723",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "scratch_disk": [
              {
                "interface": "NVME"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/eighth-upgrade-420723/zones/us-east1-b/instances/dev-services-cluster-vm-2",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "allow-docker-swarm",
              "allow-http",
              "allow-ssh",
              "dev-instances"
            ],
            "tags_fingerprint": "ClMLxTrTImg=",
            "zone": "us-east1-b"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "dependencies": [
            "google_compute_network.main_vpc_network",
            "google_compute_subnetwork.dev_vpc_subnetwork"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-11-bullseye-v20240415",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/eighth-upgrade-420723/zones/us-east1-b/disks/dev-services-cluster-vm-3"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Cascade Lake",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/eighth-upgrade-420723/zones/us-east1-b/instances/dev-services-cluster-vm-3",
            "instance_id": "1192013097440317284",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "n2-standard-2",
            "metadata_fingerprint": "dCZzJJrUyes=",
            "metadata_startup_script": "#!/bin/bash\n\n# Update the package index\nsudo apt update\n\n# Install dependencies\nsudo apt install -y \\\n    apt-transport-https \\\n    ca-certificates \\\n    curl \\\n    gnupg \\\n    lsb-release\n\n# Add Docker’s official GPG key\ncurl -fsSL https://download.docker.com/linux/debian/gpg | sudo gpg --dearmor -o /usr/share/keyrings/docker-archive-keyring.gpg\n\n# Set up the stable repository\necho \\\n  \"deb [arch=amd64 signed-by=/usr/share/keyring [...]
            "name": "dev-services-cluster-vm-3",
            "network_interface": [
              {
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/eighth-upgrade-420723/global/networks/main-vpc-network",
                "network_ip": "10.0.0.14",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/eighth-upgrade-420723/regions/us-east1/subnetworks/dev-vpc-subnetwork",
                "subnetwork_project": "eighth-upgrade-420723"
              }
            ],
            "project": "eighth-upgrade-420723",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "scratch_disk": [
              {
                "interface": "NVME"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/eighth-upgrade-420723/zones/us-east1-b/instances/dev-services-cluster-vm-3",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "allow-docker-swarm",
              "allow-http",
              "allow-ssh",
              "dev-instances"
            ],
            "tags_fingerprint": "ClMLxTrTImg=",
            "zone": "us-east1-b"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "dependencies": [
            "google_compute_network.main_vpc_network",
            "google_compute_subnetwork.dev_vpc_subnetwork"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "main_vpc_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/eighth-upgrade-420723/global/networks/main-vpc-network",
            "mtu": 0,
            "name": "main-vpc-network",
            "project": "eighth-upgrade-420723",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/eighth-upgrade-420723/global/networks/main-vpc-network"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router",
      "name": "main_router",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "bgp": [
              {
                "advertise_mode": "DEFAULT",
                "asn": 64514,
                "keepalive_interval": 20
              }
            ],
            "creation_timestamp": "2024-04-22T11:23:02.253-07:00",
            "encrypted_interconnect_router": false,
            "id": "projects/eighth-upgrade-420723/regions/us-east1/routers/main-router",
            "name": "main-router",
            "network": "https://www.googleapis.com/compute/v1/projects/eighth-upgrade-420723/global/networks/main-vpc-network",
            "project": "eighth-upgrade-420723",
            "region": "us-east1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/eighth-upgrade-420723/regions/us-east1/routers/main-router"
          },
          "dependencies": [
            "google_compute_network.main_vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "main_router_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_dynamic_port_allocation": false,
            "enable_endpoint_independent_mapping": true,
            "icmp_idle_timeout_sec": 30,
            "id": "eighth-upgrade-420723/us-east1/main-router/main-router-nat",
            "log_config": [
              {
                "enable": true,
                "filter": "ERRORS_ONLY"
              }
            ],
            "max_ports_per_vm": 0,
            "min_ports_per_vm": 0,
            "name": "main-router-nat",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "eighth-upgrade-420723",
            "region": "us-east1",
            "router": "main-router",
            "source_subnetwork_ip_ranges_to_nat": "ALL_SUBNETWORKS_ALL_IP_RANGES",
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_time_wait_timeout_sec": 120,
            "tcp_transitory_idle_timeout_sec": 30,
            "udp_idle_timeout_sec": 30
          },
          "dependencies": [
            "google_compute_network.main_vpc_network",
            "google_compute_router.main_router"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "dev_vpc_subnetwork",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-04-22T11:07:03.189-07:00",
            "gateway_address": "10.0.0.1",
            "id": "projects/eighth-upgrade-420723/regions/us-east1/subnetworks/dev-vpc-subnetwork",
            "ip_cidr_range": "10.0.0.0/24",
            "name": "dev-vpc-subnetwork",
            "network": "https://www.googleapis.com/compute/v1/projects/eighth-upgrade-420723/global/networks/main-vpc-network",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "eighth-upgrade-420723",
            "purpose": "PRIVATE",
            "region": "us-east1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/eighth-upgrade-420723/regions/us-east1/subnetworks/dev-vpc-subnetwork",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.main_vpc_network"
          ]
        }
      ]
    }
  ]
}